# stablelabel

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  AUDIT_osha_compliance_arch_v5.md  PLAN.md  README.md  Remaining_Work_  SECURITY-AUDIT.md  docker-compose.yml  osha_compliance_arch_v5.docx  osha_compliance_arch_v6.md  remaining_work_3.16  v6_part1.md  v6_part2a.md  v6_part2b.md  v6_part3a.md  v6_part3b.md  v6_part4a.md  v6_part4b.md
.github/workflows/: ci.yml
StableLabel/: StableLabel.psd1  StableLabel.psm1
StableLabel/Classes/: StableLabel.Classes.ps1
StableLabel/Private/: Assert-SLAipClient.ps1  Build-SLLabelTree.ps1  Convert-SLComplianceLabel.ps1  ConvertTo-SLSnapshot.ps1  Format-SLDryRunResult.ps1  Get-SLSitPatterns.ps1  Invoke-SLComplianceCommand.ps1  Invoke-SLGraphRequest.ps1  Invoke-SLProtectionCommand.ps1  Invoke-SLWithRetry.ps1  Resolve-SLLabelName.ps1  Test-SLDryRun.ps1  Test-SLFileTypeSupported.ps1  Write-SLAuditEntry.ps1
StableLabel/Tests/: Analysis.Tests.ps1  Connection.Tests.ps1  DLP.Tests.ps1  Documents.Tests.ps1  Elevation.Tests.ps1  FileShares.Tests.ps1  Labels.Tests.ps1  Private.Tests.ps1  Protection.Tests.ps1  Public.Tests.ps1  Reporting.Tests.ps1  Retention.Tests.ps1  (+3 more)
scripts/: setup-entra-apps.sh
server/: .env.example  docker-compose.yml
stablelabel-api/: Dockerfile  OPEN_QUESTIONS.md  alembic.ini  pyproject.toml
stablelabel-api/alembic/: env.py
stablelabel-api/alembic/versions/: 4d5bc3beec87_initial_schema.py  a7f2c1d83e01_architecture_hardening.py  b3e8f4a21c09_timescaledb_hypertables.py  c8d1e5f29b03_fix_fk_ondelete.py  d9f3a7b84c12_add_check_constraints.py
stablelabel-api/app/: config.py  dependencies.py  main.py
stablelabel-api/app/core/: auth.py  entra_auth.py  exceptions.py  file_types.py  job_states.py  rate_limiter.py  rbac.py  redis.py
stablelabel-api/app/db/: base.py  models.py
stablelabel-api/app/models/: document.py  label.py  policy_rules.py
stablelabel-api/app/routers/: audit.py  documents.py  jobs.py  labels.py  onboard.py  policies.py  reports.py  sites.py  tenants.py  users.py
stablelabel-api/app/services/: classifier.py  document_service.py  graph_client.py  label_management.py  label_service.py  label_sync.py  policy_engine.py  policy_seeder.py  powershell_runner.py  reporting.py  sit_catalog.py  sit_recognizers.py
stablelabel-api/app/worker/: cron_eval.py  deferred_classify.py  executor.py  settings.py  shared.py
stablelabel-api/scripts/: bootstrap.sh
stablelabel-api/tests/: conftest.py  test_api_integration.py  test_audit_router.py  test_auth.py  test_background_services.py  test_classifier.py  test_consent_callback.py  test_core_infrastructure.py  test_cron_eval.py  test_deferred_classify.py  test_document_models.py  test_document_service.py  test_documents_router.py  test_executor.py  test_graph_client.py  test_job_state_machine.py  test_jobs_router.py  test_label_service.py  test_onboard_router.py  test_policy_engine.py  test_powershell_runner.py  test_rate_limiter.py  test_redis_operations.py  test_redis_settings.py  test_redis_signals.py  test_reporting.py  test_reports_router.py  test_router_unit_documents_labels.py  test_router_unit_jobs_policies_tenants_users.py  test_scan_results.py  test_security_routers.py  test_sit_policy_engine.py  test_sit_recognizers.py  test_sse_progress.py  test_text_extraction.py
stablelabel-classifier/: build_exe.py  classifier_service.py
stablelabel-gui/: forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
stablelabel-web/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+494 files in other folders)
